# air-watcher

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp  run_main.sh  run_tests.sh
.github/workflows/: c-cpp.yml
Service/: CSVParser.cpp  CSVParser.h
metier/acteurs/: Actor.cpp  Actor.h  Decider.cpp  Decider.h  PrivateIndividual.cpp  PrivateIndividual.h  Privateindividual.cpp  Provider.cpp  Provider.h  SuperUser.cpp  Superuser.cpp  Superuser.h  decider.cpp  privateindividual.h
metier/data/: Catalog.cpp  Catalog.h  Cleaner.cpp  Cleaner.h  Coordinates.cpp  Coordinates.h  Measure.cpp  Measure.h  Sensor.cpp  Sensor.h  cleaner.h  measure.h
metier/service/: CSVParser.cpp  CSVParser.h  Services.cpp  Services.h
resources/tests/: cleaners.csv  measurements.csv  sensors.csv
service/: CSVParser.cpp  CSVParser.h
src/: CMakeLists.txt
src/application/data/: Catalog.cpp  Catalog.h  Cleaner.cpp  Cleaner.h  Coordinates.cpp  Coordinates.h  Measure.cpp  Measure.h  Sensor.cpp  Sensor.h
src/application/data/actor/: Actor.cpp  Actor.h  Decider.cpp  Decider.h  PrivateIndividual.cpp  PrivateIndividual.h  Provider.cpp  Provider.h  SuperUser.cpp  SuperUser.h
src/application/service/: CSVParser.cpp  CSVParser.h  Services.cpp  Services.h
src/presentation/: main.cpp
src/utils/: Utils.cpp  Utils.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  ParsingTest.cpp  ServicesTest.cpp  UtilsTest.cpp
tests/validation_tests/: CMakeLists.txt  ValidationTests.cpp
utils/: Utils.cpp  Utils.h
